django-sitemessage changelog
============================


v1.3.3 [2021-03-14]
-------------------
* Added missing migration.


v1.3.2 [2020-10-31]
-------------------
* Drop support for Python 3.5.
* Dropped support for Django < 2.0.
* Fixed deprecation warning.


v1.3.1 [2020-01-23]
-------------------
* Fixed regression in VKontakte targeted wall post.


v1.3.0 [2020-01-22]
-------------------
+ Added basic type annotations.
+ VKontakteMessenger. Added auxiliary '.get_access_token()' method.
* Fixed loosing dispatch errors in some cases.


v1.2.1 [2020-01-21]
-------------------
* Fixed 'proxies' parameter passing.
* Fixed possible dispatches jamming in 'Processing' status.


v1.2.0 [2020-01-21]
-------------------
! Dropped Python 2 support.
+ Messengers using 'requests' ('vk', 'fb', 'telegram') now support proxies.


v1.1.0 [2019-12-08]
-------------------
! Dropped QA for Django 1.7.
! Dropped QA for Python 2.
+ Add Django 3.0, removed 1.8 compatibility. Effectively deprecates Py2 support.


v1.0.0
------
! Dropped QA for Python 3.4.
* No functional changes. Celebrating 1.0.0.


v0.11.1
-------
* Fixed 'NotSupportedError' on some old DBMSs.


v0.11.0
-------
! Renamed bogus 'SITEMESSAGE_DEFAULT_SHORTCUT_EMAIL_MESSAGES_TYPE' setting into 'SITEMESSAGE_SHORTCUT_EMAIL_MESSENGER_TYPE'.
+ Added 'sitemessage_check_undelivered' command and 'check_undelivered()' function (closes #7).
+ Added 'SITEMESSAGE_SHORTCUT_EMAIL_MESSAGE_TYPE' to replace 'SITEMESSAGE_DEFAULT_SHORTCUT_EMAIL_MESSAGES_TYPE'.
+ Added dispaches delivery retry in admin (closes #8).
+ SMTPMessenger. Added SSL support (closes #10).
+ SMTPMessenger. Added timeout support (closes #9).


v0.10.0
-------
+ Added 'sitemessage_cleanup' command and 'cleanup_sent_messages()' function (closes #5).
+ Added 'sitemessage_probe' command and 'send_test_message()' function (closes #6).
+ Sending became distributed system friendlier (closes #4).


v0.9.1
------
* Updated VKontakte messenger to conform to new rules.

